[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://sprite/UI/Title.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 480, 271 )
current = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 452.0
margin_top = 231.0
margin_right = 507.0
margin_bottom = 308.0
alignment = 1

[node name="Startbtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 55.0
margin_bottom = 23.0
rect_min_size = Vector2( 32, 12 )
text = "New"

[node name="Loadbtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 55.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 12 )
text = "Load"

[node name="Quitbtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 55.0
margin_bottom = 77.0
rect_min_size = Vector2( 32, 12 )
text = "Quit"

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = -0.295
anchor_bottom = -0.286
margin_top = 82.1
margin_right = 320.0
margin_bottom = 97.48
text = "DRACENZOID"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 71.0
margin_bottom = 24.0
text = "Alpha 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 90.0
margin_top = 107.0
margin_right = 282.0
margin_bottom = 132.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Startbtn" to="." method="_on_Startbtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Loadbtn" to="." method="_on_Loadbtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quitbtn" to="." method="_on_Quitbtn_pressed"]
